# library_app

./: .env  Makefile  README.md  docker-compose.yml  pyproject.toml
library_api/: Dockerfile  entrypoint.sh
library_api/author/: models.py  serializers.py  tests.py  urls.py  views.py
library_api/author/migrations/: 0001_initial.py
library_api/book/: models.py  serializers.py  tests.py  urls.py  views.py
library_api/book/migrations/: 0001_initial.py
library_api/core/: asgi.py  settings.py  urls.py  wsgi.py
library_api/genre/: models.py  serializers.py  tests.py  urls.py  views.py
library_api/genre/migrations/: 0001_initial.py
